refactor: complete M3.5–M4.3 — flatten persistence, upgrade Spring AI, remove legacy abstractions
Milestone M3.5 — Persistence flattening:
- Delete port interfaces (EmbeddingPort, SemanticSearchPort, PromptRepositoryPort,
  TemporalEdgePort) and simplify ContentPersistencePort
- Delete Neo4j node models (BookNode, ChapterNode, ChunkNode, SceneNode,
  SeriesNode, UniverseNode) and Neo4jMapper — domain objects now carry
  @Node/@Relationship annotations and are persisted directly
- Delete Neo4jTemporalEdgeAdapter (merged into existing adapter)
- Update all repositories to use domain types instead of node models
- Update all services and handlers to depend on concrete implementations
  (Neo4jContentPersistenceAdapter, Neo4jSemanticSearchAdapter, etc.)
  instead of port interfaces

Milestone M4.1 — Spring AI upgrade:
- Bump Spring AI BOM from 1.0.0 to 1.1.4 in pom.xml

Milestone M4.2 — Embedding migration:
- Replace EmbeddingPort/EmbeddingModelAdapter with Spring AI EmbeddingModel
  injected directly into EmbeddingService
- Add model-id resolution: config property > reflective getModelId() > class name
  (Spring AI 1.1.x has no model-identity on the EmbeddingModel interface)
- Delete EmbeddingModelAdapter, EmbeddingConfig (orphaned RestTemplate bean),
  and EmbeddingModelAdapterTckTest
- Delete InMemorySemanticSearchAdapter (unused after port removal)

Milestone M4.3 — Structured output cleanup:
- Delete TriadXmlParser and TriadXmlParserTest (zero runtime references remain;
  Pass 2 triad uses Spring AI structured output via responseType)
- Update SceneDetectionClient Javadoc to reflect structured response mapping

Test changes:
- Update FakeEmbeddingPort to implement Spring AI EmbeddingModel interface
- Update FakeSemanticSearchPort and FakeContentPersistencePort for concrete types
- Update all handler tests and service tests for new dependency signatures
- Delete orphaned TCKs (EmbeddingPortTCK, SemanticSearchPortTCK)
- Delete orphaned Neo4jMapper tests and idempotenc