@@ -1,25 +1,29 @@
 package com.lorevault.api.infrastructure.persistence.neo4j.adapter;
-
-import com.lorevault.api.application.port.ContentPersistencePort;
+import com.lorevault.api.domain.content.Book;
 import com.lorevault.api.domain.content.Chapter;
 import com.lorevault.api.domain.content.Chunk;
 import com.lorevault.api.domain.content.Scene;
-import com.lorevault.api.domain.content.Universe;
 import com.lorevault.api.domain.content.Series;
-import com.lorevault.api.domain.content.Book;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.ChapterNode;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.ChunkNode;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.SceneHasChunk;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.SceneNode;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.UniverseNode;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.SeriesNode;
-import com.lorevault.api.infrastructure.persistence.neo4j.model.BookNode;
-import com.lorevault.api.infrastructure.persistence.neo4j.repository.*;
+import com.lorevault.api.domain.content.Universe;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.BookGraphRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.ChapterGraphRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.ChapterReadRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.ChunkGraphRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.SceneGraphRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.SeriesGraphRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.TemporalReadRepository;
+import com.lorevault.api.infrastructure.persistence.neo4j.repository.UniverseGraphRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Component;
 import org.springframework.transaction.annotation.Transactional;
 
-import java.util.*;
+import java.util.AbstractMap;
+import java.util.Comparator;
+import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.UUID;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
@@ -27,147 +31,137 @@ import java.util.stream.StreamSupport;
 @RequiredArgsConstructor
 @Transactional
 @SuppressWarnings("null")
-public class Neo4jContentPersistenceAdapter implements ContentPersistencePort {
+public class Neo4jContentPersistenceAdapter {
 
     private final ChapterGraphRepository chapterRepo;
     private final SceneGraphRepository sceneRepo;
     private final ChunkGraphRepository chunkRepo;
-    
-    // Hierarchy repositories
     private final UniverseGraphRepository universeRepo;
     private final SeriesGraphRepository seriesRepo;
     private final BookGraphRepository bookRepo;
-    
-    // Read repositories (for event ordering and chapter lookup)
     private final ChapterReadRepository chapterReadRepo;
     private final TemporalReadRepository temporalReadRepo;
-    
-    private final Neo4jMapper mapper;
 
-    @Override
-    public Chapter createChapter(Chapter chapter) {
-        ChapterNode node = Objects.requireNonNull(mapper.toNode(chapter), "chapter must not be null");
-        if (node.getId() == null) {
-            node.setId(UUID.randomUUID());
-        }
-        // Establish Chapter -> Book relationship if bookId provided
-        UUID bookId = chapter.getBookId();
-        if (bookId != null) {
-            bookRepo.findById(bookId).ifPresent(node::setBook);
-        }
-        return mapper.toDomain(chapterRepo.save(node));
+    protected Neo4jContentPersistenceAdapter() {
+        this.chapterRepo = null;
+        this.sceneRepo = null;
+        this.chunkRepo = null;
+        this.universeRepo = null;
+        this.seriesRepo = null;
+        this.bookRepo = null;
+        this.chapterReadRepo = null;
+        this.temporalReadRepo = null;
     }
 
-    @Override
+    public Chapter createChapter(Chapter chapter) {
+        Objects.requireNonNull(chapter, "chapter must not be null");
+        if (chapter.getId() == null) {
+            chapter.setId(UUID.randomUUID());
+        }
+        if (chapter.getBook() == null && chapter.getBookId() != null) {
+            bookRepo.findById(chapter.getBookId()).ifPresent(chapter::setBook);
+        }
+        return chapterRepo.save(chapter);
+    }
+
     @Transactional(readOnly = true)
     public Optional<Chapter> findChapterById(UUID id) {
-        return chapterRepo.findById(id).map(mapper::toDomain);
+        return chapterRepo.findById(id);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Chapter> findChapterByContentHash(String contentHash) {
-        return chapterRepo.findByContentHash(contentHash).map(mapper::toDomain);
+        return chapterRepo.findByContentHash(contentHash);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public boolean chapterExistsByContentHash(String contentHash) {
         return chapterRepo.existsByContentHash(contentHash);
     }
 
-    @Override
     public Chapter updateChapter(Chapter chapter) {
-        ChapterNode node = Objects.requireNonNull(mapper.toNode(chapter), "chapter must not be null");
-        return mapper.toDomain(chapterRepo.save(node));
+        Objects.requireNonNull(chapter, "chapter must not be null");
+        return chapterRepo.save(chapter);
     }
 
-    @Override
     public Scene addSceneToChapter(UUID chapterId, Scene scene) {
-        ChapterNode chapterNode = chapterRepo.findById(chapterId).orElseThrow();
-        SceneNode sceneNode = Objects.requireNonNull(mapper.toNode(scene), "scene must not be null");
-        if (sceneNode.getId() == null) sceneNode.setId(UUID.randomUUID());
-        // Ensure the scene carries the chapterId for efficient lookups when also labeled :Event
-        if (sceneNode.getChapterId() == null) {
-            sceneNode.setChapterId(chapterNode.getId());
+        Chapter chapter = chapterRepo.findById(chapterId).orElseThrow();
+        Objects.requireNonNull(scene, "scene must not be null");
+        if (scene.getId() == null) {
+            scene.setId(UUID.randomUUID());
         }
-        sceneNode = sceneRepo.save(sceneNode);
-        // Ensure HAS_SCENE relationship exists; initialize list if needed
-        var scenes = chapterNode.getScenes();
-        if (scenes == null) {
-            scenes = new ArrayList<>();
-            chapterNode.setScenes(scenes);
+        if (scene.getChapterId() == null) {
+            scene.setChapterId(chapterId);
         }
+        scene.setChapter(chapter);
+        Scene savedScene = sceneRepo.save(scene);
 
-        // Idempotency: avoid duplicating HAS_SCENE relationships on retries.
-        UUID sceneId = sceneNode.getId();
-        boolean alreadyLinked = scenes.stream()
-                .map(SceneNode::getId)
+        List<Scene> chapterScenes = chapter.getScenes();
+        if (chapterScenes == null) {
+            chapterScenes = new java.util.ArrayList<>();
+            chapter.setScenes(chapterScenes);
+        }
+        UUID sceneId = savedScene.getId();
+        boolean alreadyLinked = chapterScenes.stream()
+                .map(Scene::getId)
                 .anyMatch(existingId -> Objects.equals(existingId, sceneId));
         if (!alreadyLinked) {
-            scenes.add(sceneNode);
+            chapterScenes.add(savedScene);
         }
-        chapterRepo.save(chapterNode);
-        return mapper.toDomain(sceneNode);
+        chapterRepo.save(chapter);
+        return savedScene;
     }
 
-    @Override
     public List<Scene> addScenesToChapter(UUID chapterId, List<Scene> scenes) {
-        ChapterNode chapterNode = chapterRepo.findById(chapterId).orElseThrow();
-        List<SceneNode> sceneNodes = scenes.stream()
-                .map(s -> Objects.requireNonNull(mapper.toNode(s), "scene must not be null"))
+        Chapter chapter = chapterRepo.findById(chapterId).orElseThrow();
+        List<Scene> toSave = scenes.stream()
+                .peek(s -> {
+                    if (s.getId() == null) {
+                        s.setId(UUID.randomUUID());
+                    }
+                    if (s.getChapterId() == null) {
+                        s.setChapterId(chapterId);
+                    }
+                    s.setChapter(chapter);
+                })
                 .collect(Collectors.toList());
-        
-        sceneNodes.forEach(sceneNode -> {
-            if (sceneNode.getId() == null) sceneNode.setId(UUID.randomUUID());
-            if (sceneNode.getChapterId() == null) {
-                sceneNode.setChapterId(chapterNode.getId());
-            }
-        });
-        
-        sceneNodes = sceneRepo.saveAll(sceneNodes);
-        
-        var chapterScenes = chapterNode.getScenes();
+
+        List<Scene> savedScenes = sceneRepo.saveAll(toSave);
+        List<Scene> chapterScenes = chapter.getScenes();
         if (chapterScenes == null) {
-            chapterScenes = new ArrayList<>();
-            chapterNode.setScenes(chapterScenes);
+            chapterScenes = new java.util.ArrayList<>();
+            chapter.setScenes(chapterScenes);
         }
 
-        // Idempotency: avoid duplicating HAS_SCENE relationships on retries.
         Set<UUID> existingSceneIds = chapterScenes.stream()
-                .map(SceneNode::getId)
+                .map(Scene::getId)
                 .collect(Collectors.toSet());
-        for (SceneNode sceneNode : sceneNodes) {
-            UUID sceneId = sceneNode.getId();
+        for (Scene savedScene : savedScenes) {
+            UUID sceneId = savedScene.getId();
             if (sceneId == null || existingSceneIds.add(sceneId)) {
-                chapterScenes.add(sceneNode);
+                chapterScenes.add(savedScene);
             }
         }
-        chapterRepo.save(chapterNode);
-        
-        return mapper.toSceneDomainList(sceneNodes);
+        chapterRepo.save(chapter);
+        return savedScenes;
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Scene> findScenesByChapterId(UUID chapterId) {
-        return mapper.toSceneDomainList(sceneRepo.findByChapterId(chapterId));
+        return sceneRepo.findByChapterId(chapterId);
     }
 
-    @Override
     public int deleteScenesByChapterId(UUID chapterId) {
-        var existing = sceneRepo.findByChapterId(chapterId);
+        List<Scene> existing = sceneRepo.findByChapterId(chapterId);
         sceneRepo.deleteByChapterId(chapterId);
         return existing.size();
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<UUID> findChapterIdsUpTo(UUID bookId, int uptoChapterNumber) {
         return chapterReadRepo.findChapterIdsUpTo(bookId, uptoChapterNumber);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<AbstractMap.SimpleEntry<UUID, UUID>> findChapterTemporalEdges(UUID chapterId) {
         return temporalReadRepo.findChapterEventEdges(chapterId).stream()
@@ -175,105 +169,78 @@ public class Neo4jContentPersistenceAdapter implements ContentPersistencePort {
                 .collect(Collectors.toList());
     }
 
-    @Override
     public List<Chunk> addChunksToChapter(UUID chapterId, List<Chunk> chunks) {
-        ChapterNode chapter = chapterRepo.findById(chapterId).orElseThrow();
-        List<ChunkNode> chunkNodes = chunks.stream()
-                .map(c -> Objects.requireNonNull(mapper.toNode(c), "chunk must not be null"))
+        Chapter chapter = chapterRepo.findById(chapterId).orElseThrow();
+        List<Chunk> toSave = chunks.stream()
+                .peek(c -> {
+                    if (c.getId() == null) {
+                        c.setId(UUID.randomUUID());
+                    }
+                    c.setChapter(chapter);
+                })
                 .toList();
-        chunkNodes.forEach(chunk -> {
-            if (chunk.getId() == null) chunk.setId(UUID.randomUUID());
-        });
-        chunkRepo.saveAll(chunkNodes);
-        
-        var existing = chapter.getChunks();
+
+        List<Chunk> savedChunks = chunkRepo.saveAll(toSave);
+        List<Chunk> existing = chapter.getChunks();
         if (existing == null) {
-            existing = new ArrayList<>();
+            existing = new java.util.ArrayList<>();
             chapter.setChunks(existing);
         }
 
-        // Idempotency: avoid duplicating HAS_CHUNK relationships on retries.
         Set<UUID> existingChunkIds = existing.stream()
-                .map(ChunkNode::getId)
+                .map(Chunk::getId)
                 .collect(Collectors.toSet());
-        for (ChunkNode chunkNode : chunkNodes) {
-            UUID chunkId = chunkNode.getId();
+        for (Chunk savedChunk : savedChunks) {
+            UUID chunkId = savedChunk.getId();
             if (chunkId == null || existingChunkIds.add(chunkId)) {
-                existing.add(chunkNode);
+                existing.add(savedChunk);
             }
         }
 
         existing.sort(Comparator.comparing(
-                ChunkNode::getChunkNumberInChapter,
+                Chunk::getChunkNumberInChapter,
                 Comparator.nullsLast(Comparator.naturalOrder())
         ));
         chapterRepo.save(chapter);
-        return mapper.toChunkDomainList(chunkNodes);
+        return savedChunks;
     }
 
-    @Override
     public Chunk addChunkToScene(UUID sceneId, Chunk chunk) {
-        SceneNode scene = sceneRepo.findById(sceneId).orElseThrow();
-        ChunkNode chunkNode = Objects.requireNonNull(mapper.toNode(chunk), "chunk must not be null");
-        if (chunkNode.getId() == null) chunkNode.setId(UUID.randomUUID());
-        ChunkNode savedChunkNode = chunkRepo.save(chunkNode);
-        if (scene.getChunks() == null) scene.setChunks(new ArrayList<>());
-
-        // Idempotency: avoid duplicating HAS_CHUNK relationships for the same chunk.
-        boolean alreadyLinked = scene.getChunks().stream()
-                .map(SceneHasChunk::getChunk)
-                .filter(Objects::nonNull)
-                .map(ChunkNode::getId)
-            .anyMatch(existingId -> Objects.equals(existingId, savedChunkNode.getId()));
-
-        if (!alreadyLinked) {
-            SceneHasChunk rel = new SceneHasChunk();
-            rel.setChunk(savedChunkNode);
-
-            // Defensive: chunkIndex is optional; avoid NPEs on partially-built chunks.
-            Integer idx = savedChunkNode.getChunkNumberInChapter();
-            if (idx != null) {
-                rel.setChunkIndex(idx);
-            }
-
-            scene.getChunks().add(rel);
+        Scene scene = sceneRepo.findById(sceneId).orElseThrow();
+        Objects.requireNonNull(chunk, "chunk must not be null");
+        if (chunk.getId() == null) {
+            chunk.setId(UUID.randomUUID());
         }
-        sceneRepo.save(scene);
-        return mapper.toDomain(savedChunkNode);
+        chunk.setScene(scene);
+        if (chunk.getChapter() == null && scene.getChapter() != null) {
+            chunk.setChapter(scene.getChapter());
+        }
+        return chunkRepo.save(chunk);
     }
 
-    @Override
     public List<Chunk> addChunksToScene(UUID sceneId, List<Chunk> chunks) {
         return chunks.stream().map(c -> addChunkToScene(sceneId, c)).toList();
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Chapter> findChaptersByUniverse(String universe) {
-        if (universe == null || universe.isBlank()) return List.of();
-        return mapper.toChapterDomainList(chapterRepo.findAll().stream()
+        if (universe == null || universe.isBlank()) {
+            return List.of();
+        }
+        return chapterRepo.findAll().stream()
                 .filter(c -> universe.equals(c.getUniverse()))
-                .collect(Collectors.toList()));
+                .toList();
     }
 
-
-    @Override
     @Transactional(readOnly = true)
     public List<Chunk> findChunksByChapterId(UUID chapterId) {
-        long start = System.currentTimeMillis();
-        List<ChunkNode> viaScenes = chunkRepo.findByChapterIdViaScenes(chapterId);
+        List<Chunk> viaScenes = chunkRepo.findByChapterIdViaScenes(chapterId);
         if (!viaScenes.isEmpty()) {
-            long ms = System.currentTimeMillis() - start;
-            System.out.println("[Neo4jAdapter] findChunksByChapterId viaScenes size=" + viaScenes.size() + " ms=" + ms + " chapter=" + chapterId);
-            return mapper.toChunkDomainList(viaScenes);
+            return viaScenes;
         }
-        List<ChunkNode> legacy = chunkRepo.findByChapterId(chapterId);
-        long ms = System.currentTimeMillis() - start;
-        System.out.println("[Neo4jAdapter] findChunksByChapterId legacy size=" + legacy.size() + " ms=" + ms + " chapter=" + chapterId);
-        return mapper.toChunkDomainList(legacy);
+        return chunkRepo.findByChapterId(chapterId);
     }
 
-    @Override
     public int deleteChunksByChapterId(UUID chapterId) {
         int count = chunkRepo.countByChapterIdViaScenes(chapterId);
         if (count > 0) {
@@ -281,194 +248,131 @@ public class Neo4jContentPersistenceAdapter implements ContentPersistencePort {
             return count;
         }
         int legacy = chunkRepo.countByChapterId(chapterId);
-        if (legacy > 0) chunkRepo.deleteByChapterId(chapterId);
+        if (legacy > 0) {
+            chunkRepo.deleteByChapterId(chapterId);
+        }
         return legacy;
     }
 
-    @Override
     @Transactional(readOnly = true)
     public boolean chunksExistForChapter(UUID chapterId) {
         return chunkRepo.existsForChapterViaScenes(chapterId) || chunkRepo.existsForChapter(chapterId);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public int countChunksByChapterId(UUID chapterId) {
         int via = chunkRepo.countByChapterIdViaScenes(chapterId);
         return via > 0 ? via : chunkRepo.countByChapterId(chapterId);
     }
 
-    @Override
     public Chunk updateChunk(Chunk chunk) {
-        ChunkNode node = Objects.requireNonNull(mapper.toNode(chunk), "chunk must not be null");
-        return mapper.toDomain(chunkRepo.save(node));
+        Objects.requireNonNull(chunk, "chunk must not be null");
+        return chunkRepo.save(chunk);
     }
 
-    @Override
     public List<Chunk> updateChunks(List<Chunk> chunks) {
-        long start = System.currentTimeMillis();
-        if (chunks == null || chunks.isEmpty()) return List.of();
-        List<ChunkNode> nodes = chunks.stream()
-                .map(c -> Objects.requireNonNull(mapper.toNode(c), "chunk must not be null"))
-                .collect(Collectors.toList());
-        Iterable<ChunkNode> saved = chunkRepo.saveAll(nodes);
-        List<ChunkNode> savedList = StreamSupport.stream(saved.spliterator(), false).toList();
-        long ms = System.currentTimeMillis() - start;
-        System.out.println("[Neo4jAdapter] updateChunks persisted=" + savedList.size() + " ms=" + ms);
-        return mapper.toChunkDomainList(savedList);
+        if (chunks == null || chunks.isEmpty()) {
+            return List.of();
+        }
+        Iterable<Chunk> saved = chunkRepo.saveAll(chunks);
+        return StreamSupport.stream(saved.spliterator(), false).toList();
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Chunk> findAllChunksWithEmbeddings() {
-        long start = System.currentTimeMillis();
-        List<ChunkNode> chunks = chunkRepo.findAllWithEmbeddings();
-        long ms = System.currentTimeMillis() - start;
-        System.out.println("[Neo4jAdapter] findAllChunksWithEmbeddings size=" + chunks.size() + " ms=" + ms);
-        return mapper.toChunkDomainList(chunks);
+        return chunkRepo.findAllWithEmbeddings();
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Chunk> findChunkById(UUID id) {
-        return chunkRepo.findById(id).map(mapper::toDomain);
+        return chunkRepo.findById(id);
     }
 
-    // Publication Hierarchy - Universes
-    @Override
     public Universe createUniverse(Universe universe) {
-        UniverseNode node = mapper.toNode(universe);
-        if (node.getId() == null) {
-            node.setId(UUID.randomUUID());
+        Objects.requireNonNull(universe, "universe must not be null");
+        if (universe.getId() == null) {
+            universe.setId(UUID.randomUUID());
         }
-        UniverseNode saved = universeRepo.save(node);
-        return mapper.toDomain(saved);
+        return universeRepo.save(universe);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Universe> findUniverseById(UUID id) {
-        return universeRepo.findById(id).map(mapper::toDomain);
+        return universeRepo.findById(id);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Universe> findUniverseByName(String name) {
-        return universeRepo.findByName(name).map(mapper::toDomain);
+        return universeRepo.findByName(name);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Universe> findAllUniverses() {
-        return universeRepo.findAll().stream()
-                .map(mapper::toDomain)
-                .toList();
+        return universeRepo.findAll().stream().toList();
     }
 
-    // Publication Hierarchy - Series
-    @Override
     public Series createSeries(Series series) {
-        SeriesNode node = Objects.requireNonNull(mapper.toNode(series), "series must not be null");
-        if (node.getId() == null) {
-            node.setId(UUID.randomUUID());
+        Objects.requireNonNull(series, "series must not be null");
+        if (series.getId() == null) {
+            series.setId(UUID.randomUUID());
         }
-        
-        // Establish relationship to Universe
-        UUID universeId = Objects.requireNonNull(series.getUniverseId(), "series.universeId must not be null");
-        UniverseNode universeNode = universeRepo.findById(universeId)
-            .orElseThrow(() -> new IllegalArgumentException("Universe not found: " + universeId));
-        node.setUniverse(universeNode);
-        
-        SeriesNode saved = seriesRepo.save(node);
-        return mapper.toDomain(saved);
+        return seriesRepo.save(series);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Series> findSeriesById(UUID id) {
-        return seriesRepo.findById(id).map(mapper::toDomain);
+        return seriesRepo.findById(id);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Series> findSeriesByNameAndUniverseId(String name, UUID universeId) {
-        return seriesRepo.findByNameAndUniverseId(name, universeId).map(mapper::toDomain);
+        return seriesRepo.findByNameAndUniverseId(name, universeId);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Series> findSeriesByUniverseId(UUID universeId) {
         if (universeId == null) {
             return List.of();
         }
-        return seriesRepo.findByUniverseId(universeId).stream()
-                .map(mapper::toDomain)
-                .toList();
+        return seriesRepo.findByUniverseId(universeId);
     }
 
-    // Publication Hierarchy - Books
-    @Override
     public Book createBook(Book book) {
-        BookNode node = Objects.requireNonNull(mapper.toNode(book), "book must not be null");
-        if (node.getId() == null) {
-            node.setId(UUID.randomUUID());
+        Objects.requireNonNull(book, "book must not be null");
+        if (book.getId() == null) {
+            book.setId(UUID.randomUUID());
         }
-        
-        // Establish relationship to Universe
-        UUID universeId = Objects.requireNonNull(book.getUniverseId(), "book.universeId must not be null");
-        UniverseNode universeNode = universeRepo.findById(universeId)
-            .orElseThrow(() -> new IllegalArgumentException("Universe not found: " + universeId));
-        node.setUniverseNode(universeNode);
-        
-        // Establish relationship to Series if book is part of a series
-        if (book.getSeriesId() != null) {
-            UUID seriesId = book.getSeriesId();
-            SeriesNode seriesNode = seriesRepo.findById(seriesId)
-                .orElseThrow(() -> new IllegalArgumentException("Series not found: " + seriesId));
-            node.setSeriesNode(seriesNode);
-        }
-        
-        BookNode saved = bookRepo.save(node);
-        return mapper.toDomain(saved);
+        return bookRepo.save(book);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Book> findBookById(UUID id) {
-        return bookRepo.findById(id).map(mapper::toDomain);
+        return bookRepo.findById(id);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Book> findBookByTitleAndSeriesId(String title, UUID seriesId) {
-        return bookRepo.findByTitleAndSeriesId(title, seriesId).map(mapper::toDomain);
+        return bookRepo.findByTitleAndSeriesId(title, seriesId);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public Optional<Book> findStandaloneBookByTitleAndUniverseId(String title, UUID universeId) {
-        return bookRepo.findStandaloneByTitleAndUniverseId(title, universeId).map(mapper::toDomain);
+        return bookRepo.findStandaloneByTitleAndUniverseId(title, universeId);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Book> findBooksByUniverseId(UUID universeId) {
         if (universeId == null) {
             return List.of();
         }
-        return bookRepo.findByUniverseId(universeId).stream()
-                .map(mapper::toDomain)
-                .toList();
+        return bookRepo.findByUniverseId(universeId);
     }
 
-    @Override
     @Transactional(readOnly = true)
     public List<Book> findBooksBySeriesId(UUID seriesId) {
         if (seriesId == null) {
             return List.of();
         }
-        return bookRepo.findBySeriesId(seriesId).stream()
-                .map(mapper::toDomain)
-                .toList();
+        return bookRepo.findBySeriesId(seriesId);
     }
 }
